# silly-roads

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README  README.md  TODO  asan_output.txt  makefile  suppr.txt  suppressions-asan.txt  suppressions-cppcheck.txt
.github/workflows/: deploy.yml
docs/: design.md
spec/: 01_data_structure.md  02_physics_extraction.md  03_road_extraction.md  04_renderer_extraction.md  05_main_cleanup.md
specs/: 01_road_math.md  02_spatial_opt.md  03_terrain_int.md
src/: camera.cpp  camera.hpp  car.cpp  car.hpp  components.hpp  game_state.hpp  landscape.cpp  landscape.hpp  lib.cpp  lib.h  main.cpp  physics.cpp  physics.hpp  renderer.cpp  renderer.hpp  road.cpp  road.hpp  sky.cpp  sky.hpp  terrain.cpp  terrain.hpp
test/: test_main.cpp  test_module.cpp  test_spatial.cpp
tools/: filter_leaks.py
